--- a/src/pages/chat/index.module.scss
+++ b/src/pages/chat/index.module.scss
@@ -11,6 +11,7 @@
 }
 
 .rightSide {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
